gcc-14.2.0/gcc/testsuite/gdc.test/fail_compilation/test23170.d
version https://git-lfs.github.com/spec/v1
oid sha256:b28e3436aa8c651efd389fa3a4871fd3bb08d1613fa3cbe5a3e07ff94d892e08
size 346
